--- a/pet.html
+++ b/pet.html
@@ -15,8 +15,9 @@
        <li>fighting at times</li>
      </ol>
 
-   <hr/>The dog being a gift i love it so much. <img src="images/dog.jpg" alt="Dog picture">
+   <br/>The dog being a gift i love it so much.<hr />
+   <img src="images/dog.jpg" alt="Dog picture">
    </p>
-
+   <p>You can search other pics of the dog by clicking <a href="https://www.google.com" target="_blank">here.</a></p>
  </body>
 </html>
