--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
  <head>
    <title>My Pet Website</title>
+   <link href="css/style.css" rel="stylesheet" type="text/css">
  </head>
 
  <body>
    <h1>JIMMY THE DOG</h1>
    <p>I own a female dog that i refer to it as <strong><u>Jimmy</u></strong>. The dog is well trsined by professionalists and can easily understand basic instructions.
    <br/>The dog loves:
-     <ol list-style;roman>
+     <ol>
        <li>playing</li>
        <li>running</li>
        <li>hunting</li>
@@ -17,7 +18,7 @@
 
    <br/>The dog being a gift i love it so much.<hr />
    <img src="images/dog.jpg" alt="Dog picture">
-   </p>
-   <p>You can search other pics of the dog by clicking <a href="https://www.google.com" target="_blank">here.</a></p>
+ </p>
+   <p id="last">You can search other pics of the dog by clicking <a href="https://www.google.com" target="_blank">here.</a></p>
  </body>
 </html>
